# filestruct

./: .gitattributes  Cargo.toml  Cargo.toml.~1~  README.md
.github/workflows/: ci.yml
filestruct/: Cargo.toml
filestruct/src/: lib.rs
filestruct/test_data/: t_string_ok  t_string_ok_chomp
filestruct/test_data/bad_code/: bad_attribute.rs  bad_attribute.stderr  enum.rs  enum.stderr  inner_unit_type.rs  inner_unit_type.stderr  struct_anon.rs  struct_anon.stderr  struct_unit.rs  struct_unit.stderr
filestruct/tests/: integration_tests.rs
filestruct_derive/: Cargo.toml
filestruct_derive/src/: lib.rs
structfromdir/: Cargo.toml
structfromdir/src/: lib.rs
structfromdir_derive/: Cargo.toml
structfromdir_derive/src/: lib.rs
