[package]
name = "filestruct"
version = "0.3.0"
edition = "2021"
authors = ["Chris Down <chris@chrisdown.name>"]
description = "Read a directory into a Rust struct"
repository = "https://github.com/cdown/filestruct"
readme = "README.md"
keywords = ["derive"]
categories = ["filesystem"]
license = "MIT"
rust-version = "1.56.1"

[dependencies]
filestruct_derive = { version = "0.3.0", path = "../filestruct_derive" }
thiserror = "1.0.40"
