[package]
name = "filestruct_derive"
version = "0.2.0"
edition = "2021"
authors = ["Chris Down <chris@chrisdown.name>"]
description = "Derive macro to read a directory into a Rust struct"
repository = "https://github.com/cdown/filestruct"
readme = "README.md"
keywords = ["derive"]
categories = ["filesystem"]
license = "MIT"
rust-version = "1.56.1"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.56"
quote = "1.0.26"
syn = "2.0.15"
