[package]
name = "filestruct_derive"
version = "0.3.0"
edition = "2021"
authors = ["Chris Down <chris@chrisdown.name>"]
description = "Derive macro to read a directory into a Rust struct"
repository = "https://github.com/cdown/filestruct"
readme = "README.md"
keywords = ["derive"]
categories = ["filesystem"]
license = "MIT"
rust-version = "1.56.1"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { default-features = false, version = "1.0.56" }
quote = { default-features = false, version = "1.0.26" }
syn = { features = ["proc-macro", "derive", "parsing", "printing"], default-features = false, version = "2.0.15" }
